; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/netif/extr_etharp.c_etharp_init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/netif/extr_etharp.c_etharp_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32*, i32 }

@ARP_TABLE_SIZE = common dso_local global i64 0, align 8
@ETHARP_STATE_EMPTY = common dso_local global i32 0, align 4
@arp_table = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @etharp_init() #0 {
  %1 = alloca i64, align 8
  store i64 0, i64* %1, align 8
  br label %2

2:                                                ; preds = %16, %0
  %3 = load i64, i64* %1, align 8
  %4 = load i64, i64* @ARP_TABLE_SIZE, align 8
  %5 = icmp ult i64 %3, %4
  br i1 %5, label %6, label %19

6:                                                ; preds = %2
  %7 = load i32, i32* @ETHARP_STATE_EMPTY, align 4
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @arp_table, align 8
  %9 = load i64, i64* %1, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i64 %9
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 2
  store i32 %7, i32* %11, align 8
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @arp_table, align 8
  %13 = load i64, i64* %1, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i64 0, i64* %15, align 8
  br label %16

16:                                               ; preds = %6
  %17 = load i64, i64* %1, align 8
  %18 = add i64 %17, 1
  store i64 %18, i64* %1, align 8
  br label %2

19:                                               ; preds = %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
